--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <a href="#" style="font-family: 'Nunito Sans', sans-serif;">Products</a>
                         </li>
                         <li>
-                            <a href="./AuskeyTrial2/about-auskey.html" style="font-family: 'Nunito Sans', sans-serif;">ABOUT AUSKEY</a>
+                            <a href="https://anjli1810.github.io/Final1/" style="font-family: 'Nunito Sans', sans-serif;">ABOUT AUSKEY</a>
                         </li>
                         <li>
                             <a href="#" style="font-family: 'Nunito Sans', sans-serif;">SPANDAN T & C</a>
